--- a/Itau.Transfer.API/appsettings.json
+++ b/Itau.Transfer.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost\\;Database=Transferencia;user id=sa;password=12345qwert@;MultipleActiveResultSets=true;Encrypt=false"
+  },
   "AllowedHosts": "*"
 }
