--- a/Itau.Transfer.Application/Itau.Transfer.Application.csproj
+++ b/Itau.Transfer.Application/Itau.Transfer.Application.csproj
@@ -8,11 +8,16 @@
 
   <ItemGroup>
     <Folder Include="Config\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Itau.Transfer.Domain\Itau.Transfer.Domain.csproj" />
+    <ProjectReference Include="..\Itau.Transfer.Infrastructure\Itau.Transfer.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
