--- a/Itau.Transfer.Domain/Itau.Transfer.Domain.csproj
+++ b/Itau.Transfer.Domain/Itau.Transfer.Domain.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dto\" />
-    <Folder Include="Interfaces\Service\" />
+    <Compile Remove="Interfaces\**" />
+    <EmbeddedResource Remove="Interfaces\**" />
+    <None Remove="Interfaces\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.1" />
   </ItemGroup>
 
 </Project>
