Refactoring and clean code

--- a/Itau.Transfer.API/appsettings.json
+++ b/Itau.Transfer.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost\\;Database=Transferencia;user id=sa;password=12345qwert@;MultipleActiveResultSets=true;Encrypt=false"
+    "SqlServer": "Server=localhost\\;Database=Transferencias;user id=sa;password=12345qwert@;MultipleActiveResultSets=true;Encrypt=false"
   },
   "AllowedHosts": "*"
 }
