--- a/Itau.Transfer.Domain/Itau.Transfer.Domain.csproj
+++ b/Itau.Transfer.Domain/Itau.Transfer.Domain.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="FluentValidation" Version="11.9.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
