--- a/Itau.Transfer.API/Itau.Transfer.API.csproj
+++ b/Itau.Transfer.API/Itau.Transfer.API.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Sentry.AspNetCore" Version="4.7.0" />
     <PackageReference Include="Sentry.Profiling" Version="4.7.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
