Refactioring, unit tests and integrated tests

--- a/Itau.Transfer.API/Itau.Transfer.API.csproj
+++ b/Itau.Transfer.API/Itau.Transfer.API.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\Itau.Transfer.Infrastructure\Itau.Transfer.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="log20240605.txt" />
+  </ItemGroup>
+
 </Project>
